WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201900
REGRESSION: [iOS 13] webrtc/datachannel/mdns-ice-candidates.html is failing
https://bugs.webkit.org/show_bug.cgi?id=201900
Summary
REGRESSION: [iOS 13] webrtc/datachannel/mdns-ice-candidates.html is failing
Ryan Haddad
Reported
2019-09-17 21:30:10 PDT
webrtc/datachannel/mdns-ice-candidates.html is failing on iOS simulator bots running iOS 13
https://build.webkit.org/results/Apple%20iOS%2013%20Simulator%20Release%20WK2%20(Tests)/r249984%20(2)/results.html
--- /Volumes/Data/slave/ios-simulator-13-release-tests-wk2/build/layout-test-results/webrtc/datachannel/mdns-ice-candidates-expected.txt +++ /Volumes/Data/slave/ios-simulator-13-release-tests-wk2/build/layout-test-results/webrtc/datachannel/mdns-ice-candidates-actual.txt @@ -1,7 +1,32 @@ +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 +CONSOLE MESSAGE: MDNS registration of a host candidate failed with error2 -PASS Getting some MDNS candidates -PASS Basic data channel exchange from offerer to receiver -PASS Basic data channel exchange from receiver to offerer -PASS Basic data channel exchange from offerer to receiver using UDP only -PASS Basic data channel exchange from offerer to receiver 2 +FAIL Getting some MDNS candidates promise_test: Unhandled rejection with value: "Test timed out" +FAIL Basic data channel exchange from offerer to receiver promise_test: Unhandled rejection with value: "Test timed out" +FAIL Basic data channel exchange from receiver to offerer promise_test: Unhandled rejection with value: "Test timed out" +FAIL Basic data channel exchange from offerer to receiver using UDP only promise_test: Unhandled rejection with value: "Test timed out" +FAIL Basic data channel exchange from offerer to receiver 2 promise_test: Unhandled rejection with value: "Test timed out"
Attachments
Patch
(3.24 KB, patch)
2020-01-03 07:37 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-09-17 21:30:27 PDT
<
rdar://problem/55466061
>
Ryan Haddad
Comment 2
2019-09-17 21:34:18 PDT
Marked test as failing as part of
https://trac.webkit.org/changeset/250024/webkit
youenn fablet
Comment 3
2020-01-03 07:35:59 PST
This stops failing around end of October probably after support was added for fast mins registration.
youenn fablet
Comment 4
2020-01-03 07:37:53 PST
Created
attachment 386685
[details]
Patch
WebKit Commit Bot
Comment 5
2020-01-03 10:22:52 PST
Comment on
attachment 386685
[details]
Patch Clearing flags on attachment: 386685 Committed
r254007
: <
https://trac.webkit.org/changeset/254007
>
WebKit Commit Bot
Comment 6
2020-01-03 10:22:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug