REGRESSION: [iOS 13] webrtc/datachannel/mdns-ice-candidates.html is failing https://bugs.webkit.org/show_bug.cgi?id=201900 <rdar://problem/55466061>

Reviewed by Eric Carlson.

Source/WebCore:

No change of behavior.

* Modules/mediastream/PeerConnectionBackend.cpp:
(WebCore::PeerConnectionBackend::registerMDNSName):
Fix message typo (missing space).

LayoutTests:

* platform/ios/TestExpectations:
Reenable test.


Canonical link: https://commits.webkit.org/218883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254007 268f45cc-cd09-0410-ab3c-d52691b4dbfc